--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "precommit": "lint-staged"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "echarts": "^4.4.0",
     "qs": "^6.9.0",
     "react": "^16.8.6",
