--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "axios": "^0.19.0",
     "echarts": "^4.4.0",
+    "path-to-regexp": "^3.1.0",
     "qs": "^6.9.0",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-router-breadcrumbs-hoc": "^3.2.3"
   },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
