--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "echarts": "^4.4.0",
+    "mockjs": "^1.1.0",
     "path-to-regexp": "^3.1.0",
     "qs": "^6.9.0",
     "react": "^16.8.6",
