--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "private": true,
   "scripts": {
     "start": "umi dev",
+    "start:no-mock": "cross-env MOCK=none umi dev",
     "build": "umi build",
     "test": "umi test",
     "lint": "eslint --ext .js src mock tests",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "analyze": "cross-env ANALYZE=1 umi build",
+    "deploy": "npm run site && npm run gh-pages",
+    "ui": "umi ui"
   },
   "dependencies": {
     "axios": "^0.19.0",
@@ -19,6 +23,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
+    "cross-env": "^6.0.3",
     "eslint": "^5.4.0",
     "eslint-config-umi": "^1.4.0",
     "eslint-plugin-flowtype": "^2.50.0",
