--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "crypto-js": "^3.1.9-1",
     "echarts": "^4.4.0",
     "mockjs": "^1.1.0",
     "path-to-regexp": "^3.1.0",
