--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "umi build",
     "test": "umi test",
     "lint": "eslint --ext .js src mock tests",
-    "precommit": "lint-staged",
+    "precommit": "",
     "analyze": "cross-env ANALYZE=1 umi build",
     "deploy": "npm run site && npm run gh-pages",
     "ui": "umi ui"
@@ -34,9 +34,9 @@
     "husky": "^0.14.3",
     "lint-staged": "^7.2.2",
     "react-test-renderer": "^16.7.0",
-    "umi": "^2.7.7",
     "umi-plugin-react": "^1.12.8"
   },
+  
   "lint-staged": {
     "*.{js,jsx}": [
       "eslint --fix",
