--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "axios": "^0.19.0",
     "crypto-js": "^3.1.9-1",
     "echarts": "^4.4.0",
+    "global": "^4.4.0",
     "mockjs": "^1.1.0",
     "path-to-regexp": "^3.1.0",
     "qs": "^6.9.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-router-breadcrumbs-hoc": "^3.2.3"
+    "react-router-breadcrumbs-hoc": "^3.2.3",
+    "umi": "^2.12.3"
   },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
@@ -36,7 +38,6 @@
     "react-test-renderer": "^16.7.0",
     "umi-plugin-react": "^1.12.8"
   },
-  
   "lint-staged": {
     "*.{js,jsx}": [
       "eslint --fix",
