--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "start": "umi dev",
     "start:no-mock": "cross-env MOCK=none umi dev",
-    "build": "umi build",
+    "build": "cross-env UMI_ENV=prod umi build",
     "test": "umi test",
     "lint": "eslint --ext .js src mock tests",
     "precommit": "",
